平时作业提交/20222241193_崔博皓/simple_compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> declaration_list statement_list
Rule 2     declaration_list -> declaration_list declaration
Rule 3     declaration_list -> declaration
Rule 4     declaration -> var_declaration
Rule 5     declaration -> fun_declaration
Rule 6     var_declaration -> type_specifier ID SEMICOLON
Rule 7     type_specifier -> INT
Rule 8     type_specifier -> FLOAT
Rule 9     type_specifier -> VOID
Rule 10    fun_declaration -> type_specifier ID LPAREN params RPAREN compound_stmt
Rule 11    params -> param_list
Rule 12    params -> VOID
Rule 13    params -> empty
Rule 14    param_list -> param_list COMMA param
Rule 15    param_list -> param
Rule 16    param -> type_specifier ID
Rule 17    compound_stmt -> LBRACE local_declarations statement_list RBRACE
Rule 18    local_declarations -> local_declarations var_declaration
Rule 19    local_declarations -> empty
Rule 20    statement_list -> statement_list statement
Rule 21    statement_list -> empty
Rule 22    statement -> expression_stmt
Rule 23    statement -> compound_stmt
Rule 24    statement -> selection_stmt
Rule 25    statement -> iteration_stmt
Rule 26    statement -> return_stmt
Rule 27    expression_stmt -> expression SEMICOLON
Rule 28    expression_stmt -> SEMICOLON
Rule 29    selection_stmt -> IF LPAREN expression RPAREN statement ELSE statement
Rule 30    selection_stmt -> IF LPAREN expression RPAREN statement
Rule 31    iteration_stmt -> WHILE LPAREN expression RPAREN statement
Rule 32    return_stmt -> RETURN SEMICOLON
Rule 33    return_stmt -> RETURN expression SEMICOLON
Rule 34    expression -> var ASSIGN expression
Rule 35    expression -> simple_expression
Rule 36    var -> ID
Rule 37    simple_expression -> additive_expression relop additive_expression
Rule 38    simple_expression -> additive_expression
Rule 39    relop -> LT
Rule 40    relop -> LE
Rule 41    relop -> GT
Rule 42    relop -> GE
Rule 43    relop -> EQ
Rule 44    relop -> NEQ
Rule 45    additive_expression -> additive_expression addop term
Rule 46    additive_expression -> term
Rule 47    addop -> PLUS
Rule 48    addop -> MINUS
Rule 49    term -> term mulop factor
Rule 50    term -> factor
Rule 51    mulop -> MULTIPLY
Rule 52    mulop -> DIVIDE
Rule 53    factor -> LPAREN expression RPAREN
Rule 54    factor -> var
Rule 55    factor -> call
Rule 56    factor -> NUMBER
Rule 57    call -> ID LPAREN args RPAREN
Rule 58    args -> arg_list
Rule 59    args -> empty
Rule 60    arg_list -> arg_list COMMA expression
Rule 61    arg_list -> expression
Rule 62    empty -> <empty>

Terminals, with rules where they appear

ASSIGN               : 34
COMMA                : 14 60
DIVIDE               : 52
ELSE                 : 29
EQ                   : 43
FLOAT                : 8
GE                   : 42
GT                   : 41
ID                   : 6 10 16 36 57
IF                   : 29 30
INT                  : 7
LBRACE               : 17
LE                   : 40
LPAREN               : 10 29 30 31 53 57
LT                   : 39
MINUS                : 48
MULTIPLY             : 51
NEQ                  : 44
NUMBER               : 56
PLUS                 : 47
RBRACE               : 17
RETURN               : 32 33
RPAREN               : 10 29 30 31 53 57
SEMICOLON            : 6 27 28 32 33
VOID                 : 9 12
WHILE                : 31
error                : 

Nonterminals, with rules where they appear

additive_expression  : 37 37 38 45
addop                : 45
arg_list             : 58 60
args                 : 57
call                 : 55
compound_stmt        : 10 23
declaration          : 2 3
declaration_list     : 1 2
empty                : 13 19 21 59
expression           : 27 29 30 31 33 34 53 60 61
expression_stmt      : 22
factor               : 49 50
fun_declaration      : 5
iteration_stmt       : 25
local_declarations   : 17 18
mulop                : 49
param                : 14 15
param_list           : 11 14
params               : 10
program              : 0
relop                : 37
return_stmt          : 26
selection_stmt       : 24
simple_expression    : 35
statement            : 20 29 29 30 31
statement_list       : 1 17 20
term                 : 45 46 49
type_specifier       : 6 10 16
var                  : 34 54
var_declaration      : 4 18

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declaration_list statement_list
    (2) declaration_list -> . declaration_list declaration
    (3) declaration_list -> . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . fun_declaration
    (6) var_declaration -> . type_specifier ID SEMICOLON
    (10) fun_declaration -> . type_specifier ID LPAREN params RPAREN compound_stmt
    (7) type_specifier -> . INT
    (8) type_specifier -> . FLOAT
    (9) type_specifier -> . VOID

    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    VOID            shift and go to state 9

    program                        shift and go to state 1
    declaration_list               shift and go to state 2
    declaration                    shift and go to state 3
    var_declaration                shift and go to state 4
    fun_declaration                shift and go to state 5
    type_specifier                 shift and go to state 6

state 1

    (0) S' -> program .



state 2

    (1) program -> declaration_list . statement_list
    (2) declaration_list -> declaration_list . declaration
    (20) statement_list -> . statement_list statement
    (21) statement_list -> . empty
    (4) declaration -> . var_declaration
    (5) declaration -> . fun_declaration
    (62) empty -> .
    (6) var_declaration -> . type_specifier ID SEMICOLON
    (10) fun_declaration -> . type_specifier ID LPAREN params RPAREN compound_stmt
    (7) type_specifier -> . INT
    (8) type_specifier -> . FLOAT
    (9) type_specifier -> . VOID

    SEMICOLON       reduce using rule 62 (empty -> .)
    LBRACE          reduce using rule 62 (empty -> .)
    IF              reduce using rule 62 (empty -> .)
    WHILE           reduce using rule 62 (empty -> .)
    RETURN          reduce using rule 62 (empty -> .)
    ID              reduce using rule 62 (empty -> .)
    LPAREN          reduce using rule 62 (empty -> .)
    NUMBER          reduce using rule 62 (empty -> .)
    $end            reduce using rule 62 (empty -> .)
    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    VOID            shift and go to state 9

    statement_list                 shift and go to state 10
    declaration                    shift and go to state 11
    empty                          shift and go to state 12
    var_declaration                shift and go to state 4
    fun_declaration                shift and go to state 5
    type_specifier                 shift and go to state 6

state 3

    (3) declaration_list -> declaration .

    INT             reduce using rule 3 (declaration_list -> declaration .)
    FLOAT           reduce using rule 3 (declaration_list -> declaration .)
    VOID            reduce using rule 3 (declaration_list -> declaration .)
    SEMICOLON       reduce using rule 3 (declaration_list -> declaration .)
    LBRACE          reduce using rule 3 (declaration_list -> declaration .)
    IF              reduce using rule 3 (declaration_list -> declaration .)
    WHILE           reduce using rule 3 (declaration_list -> declaration .)
    RETURN          reduce using rule 3 (declaration_list -> declaration .)
    ID              reduce using rule 3 (declaration_list -> declaration .)
    LPAREN          reduce using rule 3 (declaration_list -> declaration .)
    NUMBER          reduce using rule 3 (declaration_list -> declaration .)
    $end            reduce using rule 3 (declaration_list -> declaration .)


state 4

    (4) declaration -> var_declaration .

    INT             reduce using rule 4 (declaration -> var_declaration .)
    FLOAT           reduce using rule 4 (declaration -> var_declaration .)
    VOID            reduce using rule 4 (declaration -> var_declaration .)
    SEMICOLON       reduce using rule 4 (declaration -> var_declaration .)
    LBRACE          reduce using rule 4 (declaration -> var_declaration .)
    IF              reduce using rule 4 (declaration -> var_declaration .)
    WHILE           reduce using rule 4 (declaration -> var_declaration .)
    RETURN          reduce using rule 4 (declaration -> var_declaration .)
    ID              reduce using rule 4 (declaration -> var_declaration .)
    LPAREN          reduce using rule 4 (declaration -> var_declaration .)
    NUMBER          reduce using rule 4 (declaration -> var_declaration .)
    $end            reduce using rule 4 (declaration -> var_declaration .)


state 5

    (5) declaration -> fun_declaration .

    INT             reduce using rule 5 (declaration -> fun_declaration .)
    FLOAT           reduce using rule 5 (declaration -> fun_declaration .)
    VOID            reduce using rule 5 (declaration -> fun_declaration .)
    SEMICOLON       reduce using rule 5 (declaration -> fun_declaration .)
    LBRACE          reduce using rule 5 (declaration -> fun_declaration .)
    IF              reduce using rule 5 (declaration -> fun_declaration .)
    WHILE           reduce using rule 5 (declaration -> fun_declaration .)
    RETURN          reduce using rule 5 (declaration -> fun_declaration .)
    ID              reduce using rule 5 (declaration -> fun_declaration .)
    LPAREN          reduce using rule 5 (declaration -> fun_declaration .)
    NUMBER          reduce using rule 5 (declaration -> fun_declaration .)
    $end            reduce using rule 5 (declaration -> fun_declaration .)


state 6

    (6) var_declaration -> type_specifier . ID SEMICOLON
    (10) fun_declaration -> type_specifier . ID LPAREN params RPAREN compound_stmt

    ID              shift and go to state 13


state 7

    (7) type_specifier -> INT .

    ID              reduce using rule 7 (type_specifier -> INT .)


state 8

    (8) type_specifier -> FLOAT .

    ID              reduce using rule 8 (type_specifier -> FLOAT .)


state 9

    (9) type_specifier -> VOID .

    ID              reduce using rule 9 (type_specifier -> VOID .)


state 10

    (1) program -> declaration_list statement_list .
    (20) statement_list -> statement_list . statement
    (22) statement -> . expression_stmt
    (23) statement -> . compound_stmt
    (24) statement -> . selection_stmt
    (25) statement -> . iteration_stmt
    (26) statement -> . return_stmt
    (27) expression_stmt -> . expression SEMICOLON
    (28) expression_stmt -> . SEMICOLON
    (17) compound_stmt -> . LBRACE local_declarations statement_list RBRACE
    (29) selection_stmt -> . IF LPAREN expression RPAREN statement ELSE statement
    (30) selection_stmt -> . IF LPAREN expression RPAREN statement
    (31) iteration_stmt -> . WHILE LPAREN expression RPAREN statement
    (32) return_stmt -> . RETURN SEMICOLON
    (33) return_stmt -> . RETURN expression SEMICOLON
    (34) expression -> . var ASSIGN expression
    (35) expression -> . simple_expression
    (36) var -> . ID
    (37) simple_expression -> . additive_expression relop additive_expression
    (38) simple_expression -> . additive_expression
    (45) additive_expression -> . additive_expression addop term
    (46) additive_expression -> . term
    (49) term -> . term mulop factor
    (50) term -> . factor
    (53) factor -> . LPAREN expression RPAREN
    (54) factor -> . var
    (55) factor -> . call
    (56) factor -> . NUMBER
    (57) call -> . ID LPAREN args RPAREN

    $end            reduce using rule 1 (program -> declaration_list statement_list .)
    SEMICOLON       shift and go to state 21
    LBRACE          shift and go to state 22
    IF              shift and go to state 23
    WHILE           shift and go to state 25
    RETURN          shift and go to state 26
    ID              shift and go to state 29
    LPAREN          shift and go to state 24
    NUMBER          shift and go to state 34

    statement                      shift and go to state 14
    expression_stmt                shift and go to state 15
    compound_stmt                  shift and go to state 16
    selection_stmt                 shift and go to state 17
    iteration_stmt                 shift and go to state 18
    return_stmt                    shift and go to state 19
    expression                     shift and go to state 20
    var                            shift and go to state 27
    simple_expression              shift and go to state 28
    additive_expression            shift and go to state 30
    term                           shift and go to state 31
    factor                         shift and go to state 32
    call                           shift and go to state 33

state 11

    (2) declaration_list -> declaration_list declaration .

    INT             reduce using rule 2 (declaration_list -> declaration_list declaration .)
    FLOAT           reduce using rule 2 (declaration_list -> declaration_list declaration .)
    VOID            reduce using rule 2 (declaration_list -> declaration_list declaration .)
    SEMICOLON       reduce using rule 2 (declaration_list -> declaration_list declaration .)
    LBRACE          reduce using rule 2 (declaration_list -> declaration_list declaration .)
    IF              reduce using rule 2 (declaration_list -> declaration_list declaration .)
    WHILE           reduce using rule 2 (declaration_list -> declaration_list declaration .)
    RETURN          reduce using rule 2 (declaration_list -> declaration_list declaration .)
    ID              reduce using rule 2 (declaration_list -> declaration_list declaration .)
    LPAREN          reduce using rule 2 (declaration_list -> declaration_list declaration .)
    NUMBER          reduce using rule 2 (declaration_list -> declaration_list declaration .)
    $end            reduce using rule 2 (declaration_list -> declaration_list declaration .)


state 12

    (21) statement_list -> empty .

    SEMICOLON       reduce using rule 21 (statement_list -> empty .)
    LBRACE          reduce using rule 21 (statement_list -> empty .)
    IF              reduce using rule 21 (statement_list -> empty .)
    WHILE           reduce using rule 21 (statement_list -> empty .)
    RETURN          reduce using rule 21 (statement_list -> empty .)
    ID              reduce using rule 21 (statement_list -> empty .)
    LPAREN          reduce using rule 21 (statement_list -> empty .)
    NUMBER          reduce using rule 21 (statement_list -> empty .)
    $end            reduce using rule 21 (statement_list -> empty .)
    RBRACE          reduce using rule 21 (statement_list -> empty .)


state 13

    (6) var_declaration -> type_specifier ID . SEMICOLON
    (10) fun_declaration -> type_specifier ID . LPAREN params RPAREN compound_stmt

    SEMICOLON       shift and go to state 35
    LPAREN          shift and go to state 36


state 14

    (20) statement_list -> statement_list statement .

    SEMICOLON       reduce using rule 20 (statement_list -> statement_list statement .)
    LBRACE          reduce using rule 20 (statement_list -> statement_list statement .)
    IF              reduce using rule 20 (statement_list -> statement_list statement .)
    WHILE           reduce using rule 20 (statement_list -> statement_list statement .)
    RETURN          reduce using rule 20 (statement_list -> statement_list statement .)
    ID              reduce using rule 20 (statement_list -> statement_list statement .)
    LPAREN          reduce using rule 20 (statement_list -> statement_list statement .)
    NUMBER          reduce using rule 20 (statement_list -> statement_list statement .)
    $end            reduce using rule 20 (statement_list -> statement_list statement .)
    RBRACE          reduce using rule 20 (statement_list -> statement_list statement .)


state 15

    (22) statement -> expression_stmt .

    SEMICOLON       reduce using rule 22 (statement -> expression_stmt .)
    LBRACE          reduce using rule 22 (statement -> expression_stmt .)
    IF              reduce using rule 22 (statement -> expression_stmt .)
    WHILE           reduce using rule 22 (statement -> expression_stmt .)
    RETURN          reduce using rule 22 (statement -> expression_stmt .)
    ID              reduce using rule 22 (statement -> expression_stmt .)
    LPAREN          reduce using rule 22 (statement -> expression_stmt .)
    NUMBER          reduce using rule 22 (statement -> expression_stmt .)
    $end            reduce using rule 22 (statement -> expression_stmt .)
    RBRACE          reduce using rule 22 (statement -> expression_stmt .)
    ELSE            reduce using rule 22 (statement -> expression_stmt .)


state 16

    (23) statement -> compound_stmt .

    SEMICOLON       reduce using rule 23 (statement -> compound_stmt .)
    LBRACE          reduce using rule 23 (statement -> compound_stmt .)
    IF              reduce using rule 23 (statement -> compound_stmt .)
    WHILE           reduce using rule 23 (statement -> compound_stmt .)
    RETURN          reduce using rule 23 (statement -> compound_stmt .)
    ID              reduce using rule 23 (statement -> compound_stmt .)
    LPAREN          reduce using rule 23 (statement -> compound_stmt .)
    NUMBER          reduce using rule 23 (statement -> compound_stmt .)
    $end            reduce using rule 23 (statement -> compound_stmt .)
    RBRACE          reduce using rule 23 (statement -> compound_stmt .)
    ELSE            reduce using rule 23 (statement -> compound_stmt .)


state 17

    (24) statement -> selection_stmt .

    SEMICOLON       reduce using rule 24 (statement -> selection_stmt .)
    LBRACE          reduce using rule 24 (statement -> selection_stmt .)
    IF              reduce using rule 24 (statement -> selection_stmt .)
    WHILE           reduce using rule 24 (statement -> selection_stmt .)
    RETURN          reduce using rule 24 (statement -> selection_stmt .)
    ID              reduce using rule 24 (statement -> selection_stmt .)
    LPAREN          reduce using rule 24 (statement -> selection_stmt .)
    NUMBER          reduce using rule 24 (statement -> selection_stmt .)
    $end            reduce using rule 24 (statement -> selection_stmt .)
    RBRACE          reduce using rule 24 (statement -> selection_stmt .)
    ELSE            reduce using rule 24 (statement -> selection_stmt .)


state 18

    (25) statement -> iteration_stmt .

    SEMICOLON       reduce using rule 25 (statement -> iteration_stmt .)
    LBRACE          reduce using rule 25 (statement -> iteration_stmt .)
    IF              reduce using rule 25 (statement -> iteration_stmt .)
    WHILE           reduce using rule 25 (statement -> iteration_stmt .)
    RETURN          reduce using rule 25 (statement -> iteration_stmt .)
    ID              reduce using rule 25 (statement -> iteration_stmt .)
    LPAREN          reduce using rule 25 (statement -> iteration_stmt .)
    NUMBER          reduce using rule 25 (statement -> iteration_stmt .)
    $end            reduce using rule 25 (statement -> iteration_stmt .)
    RBRACE          reduce using rule 25 (statement -> iteration_stmt .)
    ELSE            reduce using rule 25 (statement -> iteration_stmt .)


state 19

    (26) statement -> return_stmt .

    SEMICOLON       reduce using rule 26 (statement -> return_stmt .)
    LBRACE          reduce using rule 26 (statement -> return_stmt .)
    IF              reduce using rule 26 (statement -> return_stmt .)
    WHILE           reduce using rule 26 (statement -> return_stmt .)
    RETURN          reduce using rule 26 (statement -> return_stmt .)
    ID              reduce using rule 26 (statement -> return_stmt .)
    LPAREN          reduce using rule 26 (statement -> return_stmt .)
    NUMBER          reduce using rule 26 (statement -> return_stmt .)
    $end            reduce using rule 26 (statement -> return_stmt .)
    RBRACE          reduce using rule 26 (statement -> return_stmt .)
    ELSE            reduce using rule 26 (statement -> return_stmt .)


state 20

    (27) expression_stmt -> expression . SEMICOLON

    SEMICOLON       shift and go to state 37


state 21

    (28) expression_stmt -> SEMICOLON .

    SEMICOLON       reduce using rule 28 (expression_stmt -> SEMICOLON .)
    LBRACE          reduce using rule 28 (expression_stmt -> SEMICOLON .)
    IF              reduce using rule 28 (expression_stmt -> SEMICOLON .)
    WHILE           reduce using rule 28 (expression_stmt -> SEMICOLON .)
    RETURN          reduce using rule 28 (expression_stmt -> SEMICOLON .)
    ID              reduce using rule 28 (expression_stmt -> SEMICOLON .)
    LPAREN          reduce using rule 28 (expression_stmt -> SEMICOLON .)
    NUMBER          reduce using rule 28 (expression_stmt -> SEMICOLON .)
    $end            reduce using rule 28 (expression_stmt -> SEMICOLON .)
    RBRACE          reduce using rule 28 (expression_stmt -> SEMICOLON .)
    ELSE            reduce using rule 28 (expression_stmt -> SEMICOLON .)


state 22

    (17) compound_stmt -> LBRACE . local_declarations statement_list RBRACE
    (18) local_declarations -> . local_declarations var_declaration
    (19) local_declarations -> . empty
    (62) empty -> .

    INT             reduce using rule 62 (empty -> .)
    FLOAT           reduce using rule 62 (empty -> .)
    VOID            reduce using rule 62 (empty -> .)
    RBRACE          reduce using rule 62 (empty -> .)
    SEMICOLON       reduce using rule 62 (empty -> .)
    LBRACE          reduce using rule 62 (empty -> .)
    IF              reduce using rule 62 (empty -> .)
    WHILE           reduce using rule 62 (empty -> .)
    RETURN          reduce using rule 62 (empty -> .)
    ID              reduce using rule 62 (empty -> .)
    LPAREN          reduce using rule 62 (empty -> .)
    NUMBER          reduce using rule 62 (empty -> .)

    local_declarations             shift and go to state 38
    empty                          shift and go to state 39

state 23

    (29) selection_stmt -> IF . LPAREN expression RPAREN statement ELSE statement
    (30) selection_stmt -> IF . LPAREN expression RPAREN statement

    LPAREN          shift and go to state 40


state 24

    (53) factor -> LPAREN . expression RPAREN
    (34) expression -> . var ASSIGN expression
    (35) expression -> . simple_expression
    (36) var -> . ID
    (37) simple_expression -> . additive_expression relop additive_expression
    (38) simple_expression -> . additive_expression
    (45) additive_expression -> . additive_expression addop term
    (46) additive_expression -> . term
    (49) term -> . term mulop factor
    (50) term -> . factor
    (53) factor -> . LPAREN expression RPAREN
    (54) factor -> . var
    (55) factor -> . call
    (56) factor -> . NUMBER
    (57) call -> . ID LPAREN args RPAREN

    ID              shift and go to state 29
    LPAREN          shift and go to state 24
    NUMBER          shift and go to state 34

    expression                     shift and go to state 41
    var                            shift and go to state 27
    simple_expression              shift and go to state 28
    additive_expression            shift and go to state 30
    term                           shift and go to state 31
    factor                         shift and go to state 32
    call                           shift and go to state 33

state 25

    (31) iteration_stmt -> WHILE . LPAREN expression RPAREN statement

    LPAREN          shift and go to state 42


state 26

    (32) return_stmt -> RETURN . SEMICOLON
    (33) return_stmt -> RETURN . expression SEMICOLON
    (34) expression -> . var ASSIGN expression
    (35) expression -> . simple_expression
    (36) var -> . ID
    (37) simple_expression -> . additive_expression relop additive_expression
    (38) simple_expression -> . additive_expression
    (45) additive_expression -> . additive_expression addop term
    (46) additive_expression -> . term
    (49) term -> . term mulop factor
    (50) term -> . factor
    (53) factor -> . LPAREN expression RPAREN
    (54) factor -> . var
    (55) factor -> . call
    (56) factor -> . NUMBER
    (57) call -> . ID LPAREN args RPAREN

    SEMICOLON       shift and go to state 43
    ID              shift and go to state 29
    LPAREN          shift and go to state 24
    NUMBER          shift and go to state 34

    expression                     shift and go to state 44
    var                            shift and go to state 27
    simple_expression              shift and go to state 28
    additive_expression            shift and go to state 30
    term                           shift and go to state 31
    factor                         shift and go to state 32
    call                           shift and go to state 33

state 27

    (34) expression -> var . ASSIGN expression
    (54) factor -> var .

    ASSIGN          shift and go to state 45
    MULTIPLY        reduce using rule 54 (factor -> var .)
    DIVIDE          reduce using rule 54 (factor -> var .)
    LT              reduce using rule 54 (factor -> var .)
    LE              reduce using rule 54 (factor -> var .)
    GT              reduce using rule 54 (factor -> var .)
    GE              reduce using rule 54 (factor -> var .)
    EQ              reduce using rule 54 (factor -> var .)
    NEQ             reduce using rule 54 (factor -> var .)
    PLUS            reduce using rule 54 (factor -> var .)
    MINUS           reduce using rule 54 (factor -> var .)
    SEMICOLON       reduce using rule 54 (factor -> var .)
    RPAREN          reduce using rule 54 (factor -> var .)
    COMMA           reduce using rule 54 (factor -> var .)


state 28

    (35) expression -> simple_expression .

    SEMICOLON       reduce using rule 35 (expression -> simple_expression .)
    RPAREN          reduce using rule 35 (expression -> simple_expression .)
    COMMA           reduce using rule 35 (expression -> simple_expression .)


state 29

    (36) var -> ID .
    (57) call -> ID . LPAREN args RPAREN

    ASSIGN          reduce using rule 36 (var -> ID .)
    MULTIPLY        reduce using rule 36 (var -> ID .)
    DIVIDE          reduce using rule 36 (var -> ID .)
    LT              reduce using rule 36 (var -> ID .)
    LE              reduce using rule 36 (var -> ID .)
    GT              reduce using rule 36 (var -> ID .)
    GE              reduce using rule 36 (var -> ID .)
    EQ              reduce using rule 36 (var -> ID .)
    NEQ             reduce using rule 36 (var -> ID .)
    PLUS            reduce using rule 36 (var -> ID .)
    MINUS           reduce using rule 36 (var -> ID .)
    SEMICOLON       reduce using rule 36 (var -> ID .)
    RPAREN          reduce using rule 36 (var -> ID .)
    COMMA           reduce using rule 36 (var -> ID .)
    LPAREN          shift and go to state 46


state 30

    (37) simple_expression -> additive_expression . relop additive_expression
    (38) simple_expression -> additive_expression .
    (45) additive_expression -> additive_expression . addop term
    (39) relop -> . LT
    (40) relop -> . LE
    (41) relop -> . GT
    (42) relop -> . GE
    (43) relop -> . EQ
    (44) relop -> . NEQ
    (47) addop -> . PLUS
    (48) addop -> . MINUS

    SEMICOLON       reduce using rule 38 (simple_expression -> additive_expression .)
    RPAREN          reduce using rule 38 (simple_expression -> additive_expression .)
    COMMA           reduce using rule 38 (simple_expression -> additive_expression .)
    LT              shift and go to state 49
    LE              shift and go to state 50
    GT              shift and go to state 51
    GE              shift and go to state 52
    EQ              shift and go to state 53
    NEQ             shift and go to state 54
    PLUS            shift and go to state 55
    MINUS           shift and go to state 56

    relop                          shift and go to state 47
    addop                          shift and go to state 48

state 31

    (46) additive_expression -> term .
    (49) term -> term . mulop factor
    (51) mulop -> . MULTIPLY
    (52) mulop -> . DIVIDE

    LT              reduce using rule 46 (additive_expression -> term .)
    LE              reduce using rule 46 (additive_expression -> term .)
    GT              reduce using rule 46 (additive_expression -> term .)
    GE              reduce using rule 46 (additive_expression -> term .)
    EQ              reduce using rule 46 (additive_expression -> term .)
    NEQ             reduce using rule 46 (additive_expression -> term .)
    PLUS            reduce using rule 46 (additive_expression -> term .)
    MINUS           reduce using rule 46 (additive_expression -> term .)
    SEMICOLON       reduce using rule 46 (additive_expression -> term .)
    RPAREN          reduce using rule 46 (additive_expression -> term .)
    COMMA           reduce using rule 46 (additive_expression -> term .)
    MULTIPLY        shift and go to state 58
    DIVIDE          shift and go to state 59

    mulop                          shift and go to state 57

state 32

    (50) term -> factor .

    MULTIPLY        reduce using rule 50 (term -> factor .)
    DIVIDE          reduce using rule 50 (term -> factor .)
    LT              reduce using rule 50 (term -> factor .)
